# Quillborn

./: .gitignore  index.html  package.json  pnpm-lock.yaml  quillborn.apk  tsconfig.json  vite.config.ts
android-build/: .gitignore  AndroidManifest.xml
android-build/assets/: tauri-stub.js
android-build/res/drawable/: ic_launcher.xml
android-build/res/values/: strings.xml
android-build/src/: MainActivity.java
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  fonts.rs  manuscript.rs  mod.rs  search.rs
src-tauri/src/export/: mod.rs
src-tauri/src/manuscript/: chapter.rs  mod.rs  project.rs
src/components/canvas/: FindReplace.tsx  InkArchaeology.tsx  MoodAtmosphere.tsx  PalimpsestLayer.tsx  ProseRhythm.tsx  SessionProgress.tsx  WritingCanvas.tsx
src/components/characters/: CharacterSheets.tsx
src/components/chrome/: StatusBar.tsx  WindowChrome.tsx
src/components/constellation/: ConstellationMap.tsx
src/components/export/: BindingRitual.tsx
src/components/heartbeat/: ManuscriptHeartbeat.tsx
src/components/import/: ImportWizard.tsx
src/components/palette/: CommandPalette.tsx
src/components/planning/: CorkboardView.tsx  GhostNotes.tsx  OutlineView.tsx
src/components/search/: ManuscriptSearch.tsx
src/components/settings/: CSSInjection.tsx  FontManager.tsx  (+2 more)
src/i18n/: index.ts
src/plugins/: PluginManager.tsx  types.ts
src/stores/: keybindings.ts  manuscript.ts  planning.ts  theme.ts  writing.ts
src/styles/: animations.css  global.css  reset.css  theme.css
(+14 files in other folders)
